fix audio player bleeding outside the wrapper

--- a/extensions/blocks/podcast-player/style.scss
+++ b/extensions/blocks/podcast-player/style.scss
@@ -19,6 +19,7 @@ $block-border-color: $dark-gray-100;
 .wp-block-jetpack-podcast-player {
 	border: 1px solid $block-border-color;
 	background-color: $block-bg-color;
+	overflow: hidden;
 
 	/**
 	 * Player's state classes added to this element:
